Code cleaning